# entoit

./: .flake8  .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: style-checks.yml
backend/: pyproject.toml  requirements.txt
backend/server/: app.py  endpoints.py
backend/server/model/: request.py  response.py  translate.py
ci/: README.md  __main__.py  requirements.txt
scripts/: chat.py
