[project]
name = 'entoit'
description = 'Backend server for the entoit LLM assistant'
requires-python = ">= 3.10"
authors = [{name="Behzad Eftekhari", email="beftekhari@utexas.edu"}]
dependencies = [
    # Pinning FastAPI because it does not guarantee backwards compatibility:
    # xref: https://fastapi.tiangolo.com/deployment/versions/
    'fastapi ~= 0.103.2',
    'uvicorn',
    'langchain',
    'langchain-openai',
    # Starting with v2.0 urllib3 strictly requires the ssl module to be compiled
    # with OpenSSL and does not accept Mac's default LibreSSL compilation
    # xref: https://github.com/urllib3/urllib3/issues/2168
    'urllib3 < 2.0',
]

[project.optional-dependencies]
dev = [
    # Pinning black because it does not guarantee backwards comptability:
    # xref: https://black.readthedocs.io/en/stable/the_black_code_style/index.html#stability-policy
    'black ~= 23.10',
    'coverage',
    'flake8',
    'isort',
    'mypy',
]
